css/messages.css
.message {
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-bottom: 5px;
    padding-top: 5px;
    border-radius: 10px;
    border-color: #808080
}

.message-info {
    color: #3b6377;
    border-style: solid;
    background-color: #cce5e9;
}

.message-success {
    border-style: solid;
    background-color: #b4e0c4;
    color: #0a6932;
}

.message-warning {
    color: #9f8d2f;
    border-style: solid;
    background-color: #f3ecbc;
}

.message-error{
    color: #b46074;
    border-style: solid;
    background-color: #fcd4d4;
}

body, html {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    font-family: Arial, Ubuntu, sans-serif;
}

p {
    margin-left: 10px;
    margin-top: 1px;
    margin-bottom: 1px;
}

